kuber/src/dashboard/ngx-ing.yaml

# kubectl create ing dashboard-ing --rule="dashboard.k8s/=kubernetes-dashboard:443,tls=dashboard-tls" --class=ngx-lb -n kubernetes-dashboard $out
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ing
  namespace: kubernetes-dashboard
  annotations:    
    nginx.org/ssl-services: "kubernetes-dashboard"

spec:
  ingressClassName: ngx-lb
  tls:
  - hosts:
    - dashboard.k8s
    secretName: dashboard-tls

  rules:
  - host: dashboard.k8s
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix

---
